
~~~~~~~~~~
* v10.0.0:
~~~~~~~~~~

* Common changes
================
* Referencing KGySoft.Drawing.Core v10.0.0, which enables high performance shape drawing.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

+ KGySoft.Drawing.Wpf namespace
===============================
+ New GeometryExtensions class:
  + New ToPath methods: To convert a WPF Geometry instance to a KGySoft.Drawing.Shapes.Path.
+ New ReadWriteBitmapDataExtensions class:
  + New [Begin]DrawText[Async]/EndDrawText methods: To draw a text represented by a WPF FormattedText or GlyphRun
    instance into an IReadWriteBitmapData.
  + New [Begin]DrawTextOutline[Async]/EndDrawTextOutline methods: To draw the outline of a text represented by a WPF
    FormattedText or GlyphRun instance into an IReadWriteBitmapData.


~~~~~~~~~
! v9.0.0:
~~~~~~~~~

* Common changes
================
* Referencing KGySoft.Drawing.Core v9.0.0, which enables high performance shape drawing. Combined with this package
  it makes possible to draw shapes into WriteableBitmap instances of any pixel format, even indexed ones.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt
  and also https://github.com/koszeggy/KGySoft.Drawing/blob/master/README.md#shape-drawing

! KGySoft.Drawing.Wpf namespace
===============================
! BitmapSourceExtensions class:
  ! GetReadableBitmapData overloads:
    ! This method always created a copy of the source BitmapSource. From now on, if the source is a WriteableBitmap,
      the returned IReadableBitmapData will be a view on the actual source data. This prevents unnecessary copying,
      but it also keeps the source WriteableBitmap locked until the returned bitmap data is disposed.
    - Fixing buffer size check for very large images. Please note that it could be fixed only partially here because
      WPF also needs to be fixed: https://github.com/dotnet/wpf/issues/9438


~~~~~~~~~